--- a/lib/win32/CMakeLists.txt
+++ b/lib/win32/CMakeLists.txt
@@ -1,16 +1,16 @@
 
 if(CYGWIN)
-  configure_file(
-      ${CMAKE_CURRENT_SOURCE_DIR}/libglfw.pc.cmake 
-      ${CMAKE_CURRENT_BINARY_DIR}/libglfw.pc @ONLY)
+    configure_file(
+	${CMAKE_CURRENT_SOURCE_DIR}/libglfw.pc.cmake 
+	${CMAKE_CURRENT_BINARY_DIR}/libglfw.pc @ONLY)
 
 # These lines are intended to remove the --export-all-symbols
 # flag added in the Modules/Platform/CYGWIN.cmake file of the
 # CMake distribution.
 # This is a HACK.  If you have trouble _linking_ the GLFW
 # _shared_ library on Cygwin, try disabling this.
-  set(CMAKE_SHARED_LIBRARY_CREATE_C_FLAGS "-shared")
-  set(CMAKE_SHARED_MODULE_CREATE_C_FLAGS ${CMAKE_SHARED_LIBRARY_CREATE_C_FLAGS})
+    set(CMAKE_SHARED_LIBRARY_CREATE_C_FLAGS "-shared")
+    set(CMAKE_SHARED_MODULE_CREATE_C_FLAGS ${CMAKE_SHARED_LIBRARY_CREATE_C_FLAGS})
 
 endif(CYGWIN)
 
@@ -36,11 +36,13 @@ set_target_properties(libglfwShared PROPERTIES
     PREFIX ""
     IMPORT_PREFIX ""
     IMPORT_SUFFIX "dll.lib")
+
 set_target_properties(libglfwStatic libglfwShared PROPERTIES 
     CLEAN_DIRECT_OUTPUT 1
     OUTPUT_NAME glfw)
 
 if(CYGWIN)
+    # Build for the regular Win32 environment (not Cygwin)
     set_target_properties(libglfwStatic libglfwShared PROPERTIES COMPILE_FLAGS "-mwin32 -mno-cygwin")
     set_target_properties(libglfwStatic libglfwShared PROPERTIES LINK_FLAGS "-mwin32 -mno-cygwin")
 endif(CYGWIN)
