Added: joystick test to the examples

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -14,6 +14,7 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../include ${OPENGL_INCLUDE_DIR}
 add_executable(boing WIN32 MACOSX_BUNDLE boing.c)
 add_executable(gears WIN32 MACOSX_BUNDLE gears.c)
 add_executable(keytest keytest.c)
+add_executable(joytest joytest.c)
 add_executable(listmodes listmodes.c)
 #add_executable(mimaps WIN32 mimaps.c)
 #add_executable(mtbench mtbench.c)
@@ -29,8 +30,8 @@ if(MSVC)
 endif(MSVC)
 
 if(CYGWIN)
-  set_target_properties(boing gears keytest listmodes splitview triangle wave PROPERTIES COMPILE_FLAGS "-mno-cygwin")
+  set_target_properties(boing gears keytest joytest listmodes splitview triangle wave PROPERTIES COMPILE_FLAGS "-mno-cygwin")
   set_target_properties(boing gears splitview triangle wave PROPERTIES LINK_FLAGS "-mno-cygwin -mwindows")
-  set_target_properties(keytest listmodes PROPERTIES LINK_FLAGS "-mno-cygwin -mconsole")
+  set_target_properties(keytest listmodes joytest PROPERTIES LINK_FLAGS "-mno-cygwin -mconsole")
 endif(CYGWIN)
 
