--- a/examples/Makefile.dos.djgpp
+++ b/examples/Makefile.dos.djgpp
@@ -18,7 +18,7 @@ LFLAGS = -L../lib/dos -lglfw -lglu -lgl -s
 # Default: Build all tests
 all: triangle.exe listmodes.exe mthello.exe pong3d.exe mtbench.exe \
      particles.exe splitview.exe mipmaps.exe keytest.exe gears.exe \
-     boing.exe wave.exe
+     joytest.exe boing.exe wave.exe
 
 
 # Rule for triangle
@@ -56,6 +56,10 @@ mipmaps.exe: mipmaps.c
 # Rule for keytest
 keytest.exe: keytest.c
 	$(CC) $(CFLAGS) keytest.c $(LFLAGS) -lm -o $@
+
+# Rule for joytest
+joytest.exe: joytest.c
+	$(CC) $(CFLAGS) joytest.c $(LFLAGS) -lm -o $@
 
 # Rule for gears
 gears.exe: gears.c
