--- a/examples/Makefile.win32.lcc
+++ b/examples/Makefile.win32.lcc
@@ -22,7 +22,7 @@ CONSOLE = -subsystem console
 # Default: Build all tests
 all: triangle.exe listmodes.exe mthello.exe pong3d.exe mtbench.exe \
      particles.exe splitview.exe mipmaps.exe keytest.exe gears.exe \
-     boing.exe wave.exe
+     joytest.exe boing.exe wave.exe
 
 
 # Rule for triangle
@@ -60,6 +60,10 @@ mipmaps.exe: mipmaps.c
 # Rule for keytest
 keytest.exe: keytest.c
 	$(CC) $(CFLAGS) keytest.c $(LFLAGS) -o $@ -s $(CONSOLE)
+
+# Rule for joytest
+joytest.exe: joytest.c
+	$(CC) $(CFLAGS) joytest.c $(LFLAGS) -o $@ -s $(CONSOLE)
 
 # Rule for gears
 gears.exe: gears.c
