--- a/examples/Makefile.win32.mgw
+++ b/examples/Makefile.win32.mgw
@@ -22,7 +22,7 @@ CONSOLE = -mconsole
 # Default: Build all tests
 all: triangle.exe listmodes.exe mthello.exe pong3d.exe mtbench.exe \
      particles.exe splitview.exe mipmaps.exe keytest.exe gears.exe \
-     boing.exe wave.exe
+     joytest.exe boing.exe wave.exe
 
 
 # Rule for triangle
@@ -60,6 +60,10 @@ mipmaps.exe: mipmaps.c
 # Rule for keytest
 keytest.exe: keytest.c
 	$(CC) $(CFLAGS) $(CONSOLE) keytest.c $(LFLAGS) -lm -o $@
+
+# Rule for joytest
+joytest.exe: joytest.c
+	$(CC) $(CFLAGS) $(CONSOLE) joytest.c $(LFLAGS) -lm -o $@
 
 # Rule for gears
 gears.exe: gears.c
