--- a/examples/Makefile.win32.pellesc
+++ b/examples/Makefile.win32.pellesc
@@ -22,7 +22,7 @@ CONSOLE = /SUBSYSTEM:CONSOLE
 # Default: Build all tests
 all: triangle.exe listmodes.exe mthello.exe pong3d.exe mtbench.exe \
      particles.exe splitview.exe mipmaps.exe keytest.exe gears.exe \
-     boing.exe wave.exe
+     joytest.exe boing.exe wave.exe
 
 
 # Rule for triangle
@@ -60,6 +60,10 @@ mipmaps.exe: mipmaps.c
 # Rule for keytest
 keytest.exe: keytest.c
 	$(CC) $(CFLAGS) keytest.c /OUT:$@ $(CONSOLE) $(LFLAGS)
+
+# Rule for joytest
+joytest.exe: joytest.c
+	$(CC) $(CFLAGS) joytest.c /OUT:$@ $(CONSOLE) $(LFLAGS)
 
 # Rule for gears
 gears.exe: gears.c
