--- a/tests/Makefile.win32.cross-mgw
+++ b/tests/Makefile.win32.cross-mgw
@@ -18,13 +18,14 @@ LFLAGS = -L../lib/win32 -lglfw -lglu32 -lopengl32
 WINDOWS = -mwindows -e _mainCRTStartup
 CONSOLE = -mconsole
 
+BINARIES = accuracy.exe defaults.exe events.exe fsaa.exe fullscreen.exe \
+           peter.exe reopen.exe tearing.exe version.exe
+
 # Default: Build all tests
-all: accuracy.exe defaults.exe events.exe fsaa.exe peter.exe \
-     reopen.exe tearing.exe version.exe
+all: $(BINARIES)
 
 clean:
-	@rm -f accuracy.exe defaults.exe events.exe fsaa.exe peter.exe \
-    reopen.exe tearing.exe version.exe
+	@rm -f $(BINARIES)
 
 accuracy.exe: accuracy.c
 	$(TARGET)$(CC) $(CFLAGS) $(WINDOWS) accuracy.c $(LFLAGS) -o $@
@@ -37,6 +38,9 @@ events.exe: events.c
 
 fsaa.exe: fsaa.c
 	$(TARGET)$(CC) $(CFLAGS) $(WINDOWS) fsaa.c $(LFLAGS) -lm -o $@
+
+fullscreen.exe: fullscreen.c
+	$(TARGET)$(CC) $(CFLAGS) $(WINDOWS) fullscreen.c $(LFLAGS) -lm -o $@
 
 peter.exe: peter.c
 	$(TARGET)$(CC) $(CFLAGS) $(CONSOLE) peter.c $(LFLAGS) -o $@
