--- a/tests/Makefile.win32.cygwin
+++ b/tests/Makefile.win32.cygwin
@@ -1,83 +1,56 @@
 ##########################################################################
-# Makefile for GLFW test programs on Windows using Cygwin.
+# Makefile for GLFW test programs on Windows using Cygwin
 #-------------------------------------------------------------------------
 # To compile the test files using this makefile, run:
 #  make -f Makefile.win32.cygwin
 ##########################################################################
 
+TARGET ?= i586-mingw32msvc-
+
 # Compiler settings
 CC     = gcc
-CFLAGS = -I../include -Wall -mwin32 -O3 -ffast-math
-#CFLAGS = -I../include -Wall -mwin32 -O3 -ffast-math -DGLFW_DLL
+CFLAGS = -I../include -Wall -O3 -ffast-math
 
 # Linker settings
-LFLAGS = -mno-cygwin -mwindows -L../lib/win32 -lglfw -lglu32 -lopengl32 -lm -s
-#LFLAGS = -L../lib/win32 -lglfwdll -lglu32 -lopengl32 -lm -s
+LFLAGS = -L../lib/win32 -lglfw -lglu32 -lopengl32 
 
 # Subsystem settings
-WINDOWS = -mno-cygwin -mwindows -e _mainCRTStartup
-CONSOLE =
+WINDOWS = -mwindows -e _mainCRTStartup
+CONSOLE = -mconsole
 
+BINARIES = accuracy.exe defaults.exe events.exe fsaa.exe fullscreen.exe \
+           peter.exe reopen.exe tearing.exe version.exe
 
 # Default: Build all tests
-all: triangle.exe listmodes.exe mthello.exe pong3d.exe mtbench.exe \
-     particles.exe splitview.exe mipmaps.exe keytest.exe gears.exe \
-     joytest.exe boing.exe wave.exe
-
+all: $(BINARIES)
 
 clean:
-	@rm -f *.o *.obj *.tds *.exe
+	@rm -f $(BINARIES)
 
+accuracy.exe: accuracy.c
+	$(TARGET)$(CC) $(CFLAGS) $(WINDOWS) accuracy.c $(LFLAGS) -o $@
 
-# Rule for triangle
-triangle.exe: triangle.c
-	$(CC) $(CFLAGS) $(WINDOWS) triangle.c $(LFLAGS) -o $@
+defaults.exe: defaults.c
+	$(TARGET)$(CC) $(CFLAGS) $(CONSOLE) defaults.c $(LFLAGS) -o $@
 
-# Rule for listmodes
-listmodes.exe: listmodes.c
-	$(CC) $(CFLAGS) $(CONSOLE) listmodes.c $(LFLAGS) -o $@
+events.exe: events.c
+	$(TARGET)$(CC) $(CFLAGS) $(CONSOLE) events.c $(LFLAGS) -o $@
 
-# Rule for mthello
-mthello.exe: mthello.c
-	$(CC) $(CFLAGS) $(CONSOLE) mthello.c $(LFLAGS) -o $@
+fsaa.exe: fsaa.c
+	$(TARGET)$(CC) $(CFLAGS) $(WINDOWS) fsaa.c $(LFLAGS) -lm -o $@
 
-# Rule for pong3d
-pong3d.exe: pong3d.c
-	$(CC) $(CFLAGS) $(WINDOWS) pong3d.c $(LFLAGS) -o $@
+fullscreen.exe: fullscreen.c
+	$(TARGET)$(CC) $(CFLAGS) $(WINDOWS) fullscreen.c $(LFLAGS) -lm -o $@
 
-# Rule for mtbench
-mtbench.exe: mtbench.c
-	$(CC) $(CFLAGS) $(CONSOLE) mtbench.c $(LFLAGS) -o $@
+peter.exe: peter.c
+	$(TARGET)$(CC) $(CFLAGS) $(CONSOLE) peter.c $(LFLAGS) -o $@
 
-# Rule for particles
-particles.exe: particles.c
-	$(CC) $(CFLAGS) $(CONSOLE) particles.c $(LFLAGS) -o $@
+reopen.exe: reopen.c
+	$(TARGET)$(CC) $(CFLAGS) $(CONSOLE) reopen.c $(LFLAGS) -lm -o $@
 
-# Rule for splitview
-splitview.exe: splitview.c
-	$(CC) $(CFLAGS) $(WINDOWS) splitview.c $(LFLAGS) -o $@
+tearing.exe: tearing.c
+	$(TARGET)$(CC) $(CFLAGS) $(WINDOWS) tearing.c $(LFLAGS) -lm -o $@
 
-# Rule for mipmaps
-mipmaps.exe: mipmaps.c
-	$(CC) $(CFLAGS) $(WINDOWS) mipmaps.c $(LFLAGS) -o $@
-
-# Rule for keytest
-keytest.exe: keytest.c
-	$(CC) $(CFLAGS) $(CONSOLE) keytest.c $(LFLAGS) -o $@
-
-# Rule for joytest
-joytest.exe: joytest.c
-	$(CC) $(CFLAGS) $(CONSOLE) joytest.c $(LFLAGS) -o $@
-
-# Rule for gears
-gears.exe: gears.c
-	$(CC) $(CFLAGS) $(CONSOLE) gears.c $(LFLAGS) -o $@
-
-# Rule for boing
-boing.exe: boing.c
-	$(CC) $(CFLAGS) $(CONSOLE) boing.c $(LFLAGS) -o $@
-
-# Rule for wave
-wave.exe: wave.c
-	$(CC) $(CFLAGS) $(CONSOLE) wave.c $(LFLAGS) -o $@
+version.exe: version.c getopt.c
+	$(TARGET)$(CC) $(CFLAGS) $(CONSOLE) version.c getopt.c $(LFLAGS) -lm -o $@
 
