--- a/tests/Makefile.win32.cygwin
+++ b/tests/Makefile.win32.cygwin
@@ -5,8 +5,6 @@
 #  make -f Makefile.win32.cygwin
 ##########################################################################
 
-TARGET ?= i586-mingw32msvc-
-
 # Compiler settings
 CC     = gcc
 CFLAGS = -I../include -Wall -O3 -ffast-math
@@ -28,29 +26,29 @@ clean:
 	@rm -f $(BINARIES)
 
 accuracy.exe: accuracy.c
-	$(TARGET)$(CC) $(CFLAGS) $(WINDOWS) accuracy.c $(LFLAGS) -o $@
+	$(CC) $(CFLAGS) $(WINDOWS) accuracy.c $(LFLAGS) -o $@
 
 defaults.exe: defaults.c
-	$(TARGET)$(CC) $(CFLAGS) $(CONSOLE) defaults.c $(LFLAGS) -o $@
+	$(CC) $(CFLAGS) $(CONSOLE) defaults.c $(LFLAGS) -o $@
 
 events.exe: events.c
-	$(TARGET)$(CC) $(CFLAGS) $(CONSOLE) events.c $(LFLAGS) -o $@
+	$(CC) $(CFLAGS) $(CONSOLE) events.c $(LFLAGS) -o $@
 
 fsaa.exe: fsaa.c
-	$(TARGET)$(CC) $(CFLAGS) $(WINDOWS) fsaa.c $(LFLAGS) -lm -o $@
+	$(CC) $(CFLAGS) $(WINDOWS) fsaa.c $(LFLAGS) -lm -o $@
 
 fullscreen.exe: fullscreen.c
-	$(TARGET)$(CC) $(CFLAGS) $(WINDOWS) fullscreen.c $(LFLAGS) -lm -o $@
+	$(CC) $(CFLAGS) $(WINDOWS) fullscreen.c $(LFLAGS) -lm -o $@
 
 peter.exe: peter.c
-	$(TARGET)$(CC) $(CFLAGS) $(CONSOLE) peter.c $(LFLAGS) -o $@
+	$(CC) $(CFLAGS) $(CONSOLE) peter.c $(LFLAGS) -o $@
 
 reopen.exe: reopen.c
-	$(TARGET)$(CC) $(CFLAGS) $(CONSOLE) reopen.c $(LFLAGS) -lm -o $@
+	$(CC) $(CFLAGS) $(CONSOLE) reopen.c $(LFLAGS) -lm -o $@
 
 tearing.exe: tearing.c
-	$(TARGET)$(CC) $(CFLAGS) $(WINDOWS) tearing.c $(LFLAGS) -lm -o $@
+	$(CC) $(CFLAGS) $(WINDOWS) tearing.c $(LFLAGS) -lm -o $@
 
 version.exe: version.c getopt.c
-	$(TARGET)$(CC) $(CFLAGS) $(CONSOLE) version.c getopt.c $(LFLAGS) -lm -o $@
+	$(CC) $(CFLAGS) $(CONSOLE) version.c getopt.c $(LFLAGS) -lm -o $@
 
