Force 32-bit for Carbon, added GLFW library as dependency.

--- a/lib/macosx/Makefile.macosx
+++ b/lib/macosx/Makefile.macosx
@@ -21,10 +21,10 @@ default: libglfw.a libglfw.dylib
 # Compiler settings
 ##########################################################################
 CC           = gcc
-CFLAGS       = -c -I. -I.. -Wall -O2 -fno-common -g
+CFLAGS       = -c -I. -I.. -Wall -O2 -fno-common -g -m32
 
 # Some modules should be optimized for speed (e.g. image decoding)
-CFLAGS_SPEED = -c -I. -I.. -Wall -O3 -ffast-math -fno-common -g
+CFLAGS_SPEED = -c -I. -I.. -Wall -O3 -ffast-math -fno-common -g -m32
 
 
 ##########################################################################
@@ -37,7 +37,7 @@ ARFLAGS     = -rcs
 RANLIB      = ranlib
 DYLIBFLAGS  = -framework AGL -framework Carbon -framework OpenGL \
               -dynamiclib -Wl,-single_module -compatibility_version 1 \
-              -current_version 1 -install_name @executable_path/libglfw.dylib
+              -current_version 1 -install_name @executable_path/libglfw.dylib -m32
 
 
 ##########################################################################
