--- a/examples/Makefile.macosx
+++ b/examples/Makefile.macosx
@@ -7,10 +7,11 @@
 
 # Compiler settings
 CC     = gcc
-CFLAGS = -I../include
+CFLAGS = -I../include -m32
 
 # Linker settings
-LFLAGS = ../lib/macosx/libglfw.a -framework AGL -framework OpenGL -framework Carbon
+LIB = ../lib/macosx/libglfw.a
+LFLAGS = $(LIB) -framework AGL -framework OpenGL -framework Carbon -m32
 
 # Default: Build all tests
 all: Triangle.app/Contents/MacOS/GLFWApplication \
@@ -28,69 +29,69 @@ all: Triangle.app/Contents/MacOS/GLFWApplication \
      Wave.app/Contents/MacOS/GLFWApplication
 
 # Rule for triangle
-Triangle.app/Contents/MacOS/GLFWApplication: triangle.c
+Triangle.app/Contents/MacOS/GLFWApplication: triangle.c $(LIB)
 	/bin/sh bundle.sh Triangle
 	$(CC) $(CFLAGS) triangle.c $(LFLAGS) -o Triangle.app/Contents/MacOS/Triangle
 
 # Rule for listmodes
-ListModes.app/Contents/MacOS/GLFWApplication: listmodes.c
+ListModes.app/Contents/MacOS/GLFWApplication: listmodes.c $(LIB)
 	/bin/sh bundle.sh ListModes
 	$(CC) $(CFLAGS) listmodes.c $(LFLAGS) -o ListModes.app/Contents/MacOS/ListModes
 
 # Rule for mthello
-MTHello.app/Contents/MacOS/GLFWApplication: mthello.c
+MTHello.app/Contents/MacOS/GLFWApplication: mthello.c $(LIB)
 	/bin/sh bundle.sh MTHello
 	$(CC) $(CFLAGS) mthello.c $(LFLAGS) -o MTHello.app/Contents/MacOS/MTHello
 
 # Rule for pong3d
-Pong3D.app/Contents/MacOS/GLFWApplication: pong3d.c
+Pong3D.app/Contents/MacOS/GLFWApplication: pong3d.c $(LIB)
 	/bin/sh bundle.sh Pong3D
 	cp pong3d_*.tga Pong3D.app/Contents/Resources/
 	$(CC) $(CFLAGS) pong3d.c $(LFLAGS) -o Pong3D.app/Contents/MacOS/Pong3D
 
 # Rule for mtbench
-MTBench.app/Contents/MacOS/GLFWApplication: mtbench.c
+MTBench.app/Contents/MacOS/GLFWApplication: mtbench.c $(LIB)
 	/bin/sh bundle.sh MTBench
 	$(CC) $(CFLAGS) mtbench.c $(LFLAGS) -o MTBench.app/Contents/MacOS/MTBench
 
 # Rule for particles
-Particles.app/Contents/MacOS/GLFWApplication: particles.c
+Particles.app/Contents/MacOS/GLFWApplication: particles.c $(LIB)
 	/bin/sh bundle.sh Particles
 	$(CC) $(CFLAGS) particles.c $(LFLAGS) -o Particles.app/Contents/MacOS/Particles
 
 # Rule for splitview
-SplitView.app/Contents/MacOS/GLFWApplication: splitview.c
+SplitView.app/Contents/MacOS/GLFWApplication: splitview.c $(LIB)
 	/bin/sh bundle.sh SplitView
 	$(CC) $(CFLAGS) splitview.c $(LFLAGS) -o SplitView.app/Contents/MacOS/SplitView
 
 # Rule for mipmaps
-Mipmaps.app/Contents/MacOS/GLFWApplication: mipmaps.c
+Mipmaps.app/Contents/MacOS/GLFWApplication: mipmaps.c $(LIB)
 	/bin/sh bundle.sh Mipmaps
 	cp mipmaps.tga Mipmaps.app/Contents/Resources/
 	$(CC) $(CFLAGS) mipmaps.c $(LFLAGS) -o Mipmaps.app/Contents/MacOS/Mipmaps
 
 # Rule for keytest
-KeyTest.app/Contents/MacOS/GLFWApplication: keytest.c
+KeyTest.app/Contents/MacOS/GLFWApplication: keytest.c $(LIB)
 	/bin/sh bundle.sh KeyTest
 	$(CC) $(CFLAGS) keytest.c $(LFLAGS) -o KeyTest.app/Contents/MacOS/KeyTest
 
 # Rule for joytest
-JoyTest.app/Contents/MacOS/GLFWApplication: joytest.c
+JoyTest.app/Contents/MacOS/GLFWApplication: joytest.c $(LIB)
 	/bin/sh bundle.sh JoyTest
 	$(CC) $(CFLAGS) joytest.c $(LFLAGS) -o JoyTest.app/Contents/MacOS/JoyTest
 
 # Rule for gears
-Gears.app/Contents/MacOS/GLFWApplication: gears.c
+Gears.app/Contents/MacOS/GLFWApplication: gears.c $(LIB)
 	/bin/sh bundle.sh Gears
 	$(CC) $(CFLAGS) gears.c $(LFLAGS) -o Gears.app/Contents/MacOS/Gears
 
 # Rule for boing
-Boing.app/Contents/MacOS/GLFWApplication: boing.c
+Boing.app/Contents/MacOS/GLFWApplication: boing.c $(LIB)
 	/bin/sh bundle.sh Boing
 	$(CC) $(CFLAGS) boing.c $(LFLAGS) -o Boing.app/Contents/MacOS/Boing
 
 # Rule for wave
-Wave.app/Contents/MacOS/GLFWApplication: wave.c
+Wave.app/Contents/MacOS/GLFWApplication: wave.c $(LIB)
 	/bin/sh bundle.sh Wave
 	$(CC) $(CFLAGS) wave.c $(LFLAGS) -o Wave.app/Contents/MacOS/Wave
 
