--- a/tests/Makefile.macosx
+++ b/tests/Makefile.macosx
@@ -7,11 +7,11 @@
 
 # Compiler settings
 CC     = gcc
-CFLAGS = -I../include
-LIB    = ../lib/macosx/libglfw.a
+CFLAGS = -I../include -m32
 
 # Linker settings
-LFLAGS = $(LIB) -framework AGL -framework OpenGL -framework Carbon
+LIB    = ../lib/macosx/libglfw.a
+LFLAGS = $(LIB) -framework AGL -framework OpenGL -framework Carbon -m32
 
 # Default: Build all tests
 all: Accuracy.app/Contents/MacOS/Accuracy \
