Binary name updates.

--- a/tests/Makefile.macosx
+++ b/tests/Makefile.macosx
@@ -18,6 +18,7 @@ all: Accuracy.app/Contents/MacOS/Accuracy \
      Defaults.app/Contents/MacOS/Defaults \
      Events.app/Contents/MacOS/Events \
      FSAA.app/Contents/MacOS/FSAA \
+     Fullscreen.app/Contents/MacOS/Fullscreen \
      Peter.app/Contents/MacOS/Peter \
      ReOpen.app/Contents/MacOS/ReOpen \
      Tearing.app/Contents/MacOS/Tearing \
@@ -39,6 +40,10 @@ FSAA.app/Contents/MacOS/FSAA: fsaa.c $(LIB)
 	/bin/sh bundle.sh FSAA
 	$(CC) $(CFLAGS) fsaa.c $(LFLAGS) -o FSAA.app/Contents/MacOS/FSAA
 
+Fullscreen.app/Contents/MacOS/Fullscreen: fullscreen.c $(LIB)
+	/bin/sh bundle.sh Fullscreen
+	$(CC) $(CFLAGS) fullscreen.c $(LFLAGS) -o Fullscreen.app/Contents/MacOS/Fullscreen
+
 Peter.app/Contents/MacOS/Peter: peter.c $(LIB)
 	/bin/sh bundle.sh Peter
 	$(CC) $(CFLAGS) peter.c $(LFLAGS) -o Peter.app/Contents/MacOS/Peter
@@ -56,6 +61,6 @@ Version.app/Contents/MacOS/Version: version.c $(LIB)
 	$(CC) $(CFLAGS) version.c $(LFLAGS) -o Version.app/Contents/MacOS/Version
 
 clean:
-	rm -rf Accuracy.app Defaults.app Events.app FSAA.app Peter.app ReOpen.app \
-		Tearing.app Version.app
+	rm -rf Accuracy.app Defaults.app Events.app FSAA.app Fullscreen.app \
+               Peter.app ReOpen.app Tearing.app Version.app
 
