--- a/lib/cocoa/Makefile.cocoa
+++ b/lib/cocoa/Makefile.cocoa
@@ -38,6 +38,7 @@ RANLIB      = ranlib
 DYLIBFLAGS  = -framework Cocoa -framework OpenGL \
               -dynamiclib -Wl,-single_module -compatibility_version 1 \
               -current_version 1 -install_name @executable_path/libglfw.dylib
+HEADERS     = ../../include/GL/glfw.h ../internal.h platform.h
 
 
 ##########################################################################
@@ -111,63 +112,63 @@ clean:
 ##########################################################################
 # Rules for building library object files
 ##########################################################################
-enable.o: ../enable.c ../internal.h platform.h
+enable.o: ../enable.c $(HEADERS)
 	$(CC) $(CFLAGS) -o $@ ../enable.c
 
-fullscreen.o: ../fullscreen.c ../internal.h platform.h
+fullscreen.o: ../fullscreen.c $(HEADERS)
 	$(CC) $(CFLAGS) -o $@ ../fullscreen.c
 
-glext.o: ../glext.c ../internal.h platform.h
+glext.o: ../glext.c $(HEADERS)
 	$(CC) $(CFLAGS) -o $@ ../glext.c
 
-image.o: ../image.c ../internal.h platform.h
+image.o: ../image.c $(HEADERS)
 	$(CC) $(CFLAGS_SPEED) -o $@ ../image.c
 
-init.o: ../init.c ../internal.h platform.h
+init.o: ../init.c $(HEADERS)
 	$(CC) $(CFLAGS) -o $@ ../init.c
 
-input.o: ../input.c ../internal.h platform.h
+input.o: ../input.c $(HEADERS)
 	$(CC) $(CFLAGS) -o $@ ../input.c
 
-joystick.o: ../joystick.c ../internal.h platform.h
+joystick.o: ../joystick.c $(HEADERS)
 	$(CC) $(CFLAGS) -o $@ ../joystick.c
 
-stream.o: ../stream.c ../internal.h platform.h
+stream.o: ../stream.c $(HEADERS)
 	$(CC) $(CFLAGS) -o $@ ../stream.c
 
-tga.o: ../tga.c ../internal.h platform.h
+tga.o: ../tga.c $(HEADERS)
 	$(CC) $(CFLAGS_SPEED) -o $@ ../tga.c
 
-thread.o: ../thread.c ../internal.h platform.h
+thread.o: ../thread.c $(HEADERS)
 	$(CC) $(CFLAGS) -o $@ ../thread.c
 
-time.o: ../time.c ../internal.h platform.h
+time.o: ../time.c $(HEADERS)
 	$(CC) $(CFLAGS) -o $@ ../time.c
 
-window.o: ../window.c ../internal.h platform.h
+window.o: ../window.c $(HEADERS)
 	$(CC) $(CFLAGS) -o $@ ../window.c
 
-cocoa_enable.o: cocoa_enable.m ../internal.h platform.h
+cocoa_enable.o: cocoa_enable.m $(HEADERS)
 	$(CC) $(CFLAGS) -o $@ cocoa_enable.m
 
-cocoa_fullscreen.o: cocoa_fullscreen.m ../internal.h platform.h
+cocoa_fullscreen.o: cocoa_fullscreen.m $(HEADERS)
 	$(CC) $(CFLAGS) -o $@ cocoa_fullscreen.m
 
-cocoa_glext.o: cocoa_glext.m ../internal.h platform.h
+cocoa_glext.o: cocoa_glext.m $(HEADERS)
 	$(CC) $(CFLAGS) -o $@ cocoa_glext.m
 
-cocoa_init.o: cocoa_init.m ../internal.h platform.h
+cocoa_init.o: cocoa_init.m $(HEADERS)
 	$(CC) $(CFLAGS) -o $@ cocoa_init.m
 
-cocoa_joystick.o: cocoa_joystick.m ../internal.h platform.h
+cocoa_joystick.o: cocoa_joystick.m $(HEADERS)
 	$(CC) $(CFLAGS) -o $@ cocoa_joystick.m
 
-cocoa_thread.o: cocoa_thread.c ../internal.h platform.h
+cocoa_thread.o: cocoa_thread.c $(HEADERS)
 	$(CC) $(CFLAGS) -o $@ cocoa_thread.c
 
-cocoa_time.o: cocoa_time.m ../internal.h platform.h
+cocoa_time.o: cocoa_time.m $(HEADERS)
 	$(CC) $(CFLAGS) -o $@ cocoa_time.m
 
-cocoa_window.o: cocoa_window.m ../internal.h platform.h
+cocoa_window.o: cocoa_window.m $(HEADERS)
 	$(CC) $(CFLAGS) -o $@ cocoa_window.m
 
