--- a/lib/cocoa/libglfw.pc.in
+++ b/lib/cocoa/libglfw.pc.in
@@ -7,5 +7,5 @@ Name: GLFW
 Description: A portable framework for OpenGL development
 Version: 2.7
 URL: http://glfw.sourceforge.net/
-Libs: -L${libdir} -lglfw -framework AGL -framework OpenGL -framework Carbon
+Libs: -L${libdir} -lglfw -framework Cocoa -framework OpenGL
 Cflags: -I${includedir}
