--- a/examples/Makefile.macosx
+++ b/examples/Makefile.macosx
@@ -11,6 +11,7 @@ CFLAGS = -I../include -m32
 
 # Linker settings
 LIB = ../lib/macosx/libglfw.a
+HEADER = ../include/GL/glfw.h
 LFLAGS = $(LIB) -framework AGL -framework OpenGL -framework Carbon -m32
 
 # Default: Build all tests
@@ -28,75 +29,60 @@ all: Triangle.app/Contents/MacOS/Triangle \
      Boing.app/Contents/MacOS/Boing \
      Wave.app/Contents/MacOS/Wave
 
-# Rule for triangle
-Triangle.app/Contents/MacOS/GLFWApplication: triangle.c $(LIB)
+Triangle.app/Contents/MacOS/Triangle: triangle.c $(LIB) $(HEADER)
 	/bin/sh bundle.sh Triangle
 	$(CC) $(CFLAGS) triangle.c $(LFLAGS) -o Triangle.app/Contents/MacOS/Triangle
 
-# Rule for listmodes
-ListModes.app/Contents/MacOS/GLFWApplication: listmodes.c $(LIB)
+ListModes.app/Contents/MacOS/ListModes: listmodes.c $(LIB) $(HEADER)
 	/bin/sh bundle.sh ListModes
 	$(CC) $(CFLAGS) listmodes.c $(LFLAGS) -o ListModes.app/Contents/MacOS/ListModes
 
-# Rule for mthello
-MTHello.app/Contents/MacOS/GLFWApplication: mthello.c $(LIB)
+MTHello.app/Contents/MacOS/MTHello: mthello.c $(LIB) $(HEADER)
 	/bin/sh bundle.sh MTHello
 	$(CC) $(CFLAGS) mthello.c $(LFLAGS) -o MTHello.app/Contents/MacOS/MTHello
 
-# Rule for pong3d
-Pong3D.app/Contents/MacOS/GLFWApplication: pong3d.c $(LIB)
+Pong3D.app/Contents/MacOS/Pong3D: pong3d.c $(LIB) $(HEADER)
 	/bin/sh bundle.sh Pong3D
 	cp pong3d_*.tga Pong3D.app/Contents/Resources/
 	$(CC) $(CFLAGS) pong3d.c $(LFLAGS) -o Pong3D.app/Contents/MacOS/Pong3D
 
-# Rule for mtbench
-MTBench.app/Contents/MacOS/GLFWApplication: mtbench.c $(LIB)
+MTBench.app/Contents/MacOS/MTBench: mtbench.c $(LIB) $(HEADER)
 	/bin/sh bundle.sh MTBench
 	$(CC) $(CFLAGS) mtbench.c $(LFLAGS) -o MTBench.app/Contents/MacOS/MTBench
 
-# Rule for particles
-Particles.app/Contents/MacOS/GLFWApplication: particles.c $(LIB)
+Particles.app/Contents/MacOS/Particles: particles.c $(LIB) $(HEADER)
 	/bin/sh bundle.sh Particles
 	$(CC) $(CFLAGS) particles.c $(LFLAGS) -o Particles.app/Contents/MacOS/Particles
 
-# Rule for splitview
-SplitView.app/Contents/MacOS/GLFWApplication: splitview.c $(LIB)
+SplitView.app/Contents/MacOS/SplitView: splitview.c $(LIB) $(HEADER)
 	/bin/sh bundle.sh SplitView
 	$(CC) $(CFLAGS) splitview.c $(LFLAGS) -o SplitView.app/Contents/MacOS/SplitView
 
-# Rule for mipmaps
-Mipmaps.app/Contents/MacOS/GLFWApplication: mipmaps.c $(LIB)
+Mipmaps.app/Contents/MacOS/Mipmaps: mipmaps.c $(LIB) $(HEADER)
 	/bin/sh bundle.sh Mipmaps
 	cp mipmaps.tga Mipmaps.app/Contents/Resources/
 	$(CC) $(CFLAGS) mipmaps.c $(LFLAGS) -o Mipmaps.app/Contents/MacOS/Mipmaps
 
-# Rule for keytest
-KeyTest.app/Contents/MacOS/GLFWApplication: keytest.c $(LIB)
+KeyTest.app/Contents/MacOS/KeyTest: keytest.c $(LIB) $(HEADER)
 	/bin/sh bundle.sh KeyTest
 	$(CC) $(CFLAGS) keytest.c $(LFLAGS) -o KeyTest.app/Contents/MacOS/KeyTest
 
-# Rule for joytest
-JoyTest.app/Contents/MacOS/GLFWApplication: joytest.c $(LIB)
+JoyTest.app/Contents/MacOS/JoyTest: joytest.c $(LIB) $(HEADER)
 	/bin/sh bundle.sh JoyTest
 	$(CC) $(CFLAGS) joytest.c $(LFLAGS) -o JoyTest.app/Contents/MacOS/JoyTest
 
-# Rule for gears
-Gears.app/Contents/MacOS/GLFWApplication: gears.c $(LIB)
+Gears.app/Contents/MacOS/Gears: gears.c $(LIB) $(HEADER)
 	/bin/sh bundle.sh Gears
 	$(CC) $(CFLAGS) gears.c $(LFLAGS) -o Gears.app/Contents/MacOS/Gears
 
-# Rule for boing
-Boing.app/Contents/MacOS/GLFWApplication: boing.c $(LIB)
+Boing.app/Contents/MacOS/Boing: boing.c $(LIB) $(HEADER)
 	/bin/sh bundle.sh Boing
 	$(CC) $(CFLAGS) boing.c $(LFLAGS) -o Boing.app/Contents/MacOS/Boing
 
-# Rule for wave
-Wave.app/Contents/MacOS/GLFWApplication: wave.c $(LIB)
+Wave.app/Contents/MacOS/Wave: wave.c $(LIB) $(HEADER)
 	/bin/sh bundle.sh Wave
 	$(CC) $(CFLAGS) wave.c $(LFLAGS) -o Wave.app/Contents/MacOS/Wave
 
-
-# Clean
 clean:
 	rm -rf JoyTest.app Triangle.app ListModes.app MTHello.app \
 	       Pong3D.app MTBench.app Particles.app SplitView.app \
