--- a/examples/Makefile.macosx
+++ b/examples/Makefile.macosx
@@ -23,7 +23,6 @@ all: Triangle.app/Contents/MacOS/Triangle \
      Particles.app/Contents/MacOS/Particles \
      SplitView.app/Contents/MacOS/SplitView \
      Mipmaps.app/Contents/MacOS/Mipmaps \
-     KeyTest.app/Contents/MacOS/KeyTest \
      JoyTest.app/Contents/MacOS/JoyTest \
      Gears.app/Contents/MacOS/Gears \
      Boing.app/Contents/MacOS/Boing \
@@ -63,10 +62,6 @@ Mipmaps.app/Contents/MacOS/Mipmaps: mipmaps.c $(LIB) $(HEADER)
 	cp mipmaps.tga Mipmaps.app/Contents/Resources/
 	$(CC) $(CFLAGS) mipmaps.c $(LFLAGS) -o Mipmaps.app/Contents/MacOS/Mipmaps
 
-KeyTest.app/Contents/MacOS/KeyTest: keytest.c $(LIB) $(HEADER)
-	/bin/sh bundle.sh KeyTest
-	$(CC) $(CFLAGS) keytest.c $(LFLAGS) -o KeyTest.app/Contents/MacOS/KeyTest
-
 JoyTest.app/Contents/MacOS/JoyTest: joytest.c $(LIB) $(HEADER)
 	/bin/sh bundle.sh JoyTest
 	$(CC) $(CFLAGS) joytest.c $(LFLAGS) -o JoyTest.app/Contents/MacOS/JoyTest
@@ -86,5 +81,5 @@ Wave.app/Contents/MacOS/Wave: wave.c $(LIB) $(HEADER)
 clean:
 	rm -rf JoyTest.app Triangle.app ListModes.app MTHello.app \
 	       Pong3D.app MTBench.app Particles.app SplitView.app \
-	       Mipmaps.app KeyTest.app Gears.app Boing.app Wave.app
+	       Mipmaps.app Gears.app Boing.app Wave.app
 
