--- a/examples/Makefile.win32.bcc
+++ b/examples/Makefile.win32.bcc
@@ -22,8 +22,8 @@ CONSOLE = -tWC
 
 # Default: Build all tests
 all: triangle.exe listmodes.exe mthello.exe pong3d.exe mtbench.exe \
-     particles.exe splitview.exe mipmaps.exe keytest.exe gears.exe \
-     joytest.exe boing.exe wave.exe
+     particles.exe splitview.exe mipmaps.exe gears.exe joytest.exe \
+	 boing.exe wave.exe
 
 
 # Rule for triangle
@@ -57,10 +57,6 @@ splitview.exe: splitview.c
 # Rule for mipmaps
 mipmaps.exe: mipmaps.c
 	$(CC) $(CFLAGS) -e$@ $(WINDOWS) mipmaps.c $(LFLAGS)
-
-# Rule for keytest
-keytest.exe: keytest.c
-	$(CC) $(CFLAGS) -e$@ $(CONSOLE) keytest.c $(LFLAGS)
 
 # Rule for joytest
 joytest.exe: joytest.c
