--- a/examples/Makefile.win32.cross-mgw
+++ b/examples/Makefile.win32.cross-mgw
@@ -21,8 +21,8 @@ CONSOLE = -mconsole
 
 # Default: Build all tests
 all: triangle.exe listmodes.exe mthello.exe pong3d.exe mtbench.exe \
-     particles.exe splitview.exe mipmaps.exe keytest.exe gears.exe \
-     joytest.exe boing.exe wave.exe
+     particles.exe splitview.exe mipmaps.exe gears.exe joytest.exe \
+	 boing.exe wave.exe
 
 
 clean:
@@ -60,10 +60,6 @@ splitview.exe: splitview.c
 # Rule for mipmaps
 mipmaps.exe: mipmaps.c
 	$(TARGET)$(CC) $(CFLAGS) $(WINDOWS) mipmaps.c $(LFLAGS) -lm -o $@
-
-# Rule for keytest
-keytest.exe: keytest.c
-	$(TARGET)$(CC) $(CFLAGS) $(CONSOLE) keytest.c $(LFLAGS) -lm -o $@
 
 # Rule for joytest
 joytest.exe: joytest.c
