--- a/examples/Makefile.win32.msvc
+++ b/examples/Makefile.win32.msvc
@@ -21,8 +21,8 @@ CONSOLE = /link /subsystem:console
 
 # Default: Build all tests
 all: triangle.exe listmodes.exe mthello.exe pong3d.exe mtbench.exe \
-     particles.exe splitview.exe mipmaps.exe keytest.exe gears.exe \
-     joytest.exe boing.exe wave.exe
+     particles.exe splitview.exe mipmaps.exe gears.exe joytest.exe \
+	 boing.exe wave.exe
 
 
 # Rule for triangle
@@ -56,10 +56,6 @@ splitview.exe: splitview.c
 # Rule for mipmaps
 mipmaps.exe: mipmaps.c
 	$(CC) $(CFLAGS) /Fe$@ mipmaps.c $(LFLAGS) $(WINDOWS)
-
-# Rule for keytest
-keytest.exe: keytest.c
-	$(CC) $(CFLAGS) /Fe$@ keytest.c $(LFLAGS) $(CONSOLE)
 
 # Rule for joytest
 joytest.exe: joytest.c
